make required auth in dcp configurable
